Finally got a HD auto-sprite working!
I haven't thoroughly tested it yet but It's looking promising :)

--- a/assets/css/media-merge/style-lt-ie9.css
+++ b/assets/css/media-merge/style-lt-ie9.css
@@ -72,15 +72,6 @@ SCSS variables are information about icon's compiled state, stored under its ori
 At the bottom of this section, we provide information about the spritesheet itself
 */
 
-/*
-SCSS variables are information about icon's compiled state, stored under its original file name
-
-.icon-home { width: map-get($icon-home, 'width');
-}
-
-At the bottom of this section, we provide information about the spritesheet itself
-*/
-
 .mobileOnly,
 .tabletOnly,
 .desktopOnly {
@@ -253,61 +244,54 @@ The `sprites` mixin generates identical output to the CSS template but can be ov
 [class*=" sprite-"]:before,
 [class^="sprite-"]:before {
 	content: "";
-	display: block;
-	background-image: url("../images/auto-sprite/AllDevices-LowDef-autosprite.png");
+	display: inline-block;
+	background-image: url(../images/auto-sprite/LowDef-autosprite.png);
 }
 
 .sprite-external-link:before {
-	background-position: -17px -17px;
-	width: 10px;
-	height: 11px;
+	background-position: -8.5px -8.5px;
+	width: 5px;
+	height: 5.5px;
 }
 
 .sprite-globe:before {
 	background-position: 0px 0px;
-	width: 15px;
-	height: 15px;
+	width: 7.5px;
+	height: 7.5px;
 }
 
 .sprite-music:before {
-	background-position: 0px -17px;
-	width: 15px;
-	height: 14px;
+	background-position: 0px -8.5px;
+	width: 7.5px;
+	height: 7px;
 }
 
 .sprite-podcast:before {
-	background-position: -17px 0px;
-	width: 15px;
-	height: 15px;
-}
-
-[class*=" sprite-"]:before,
-[class^="sprite-"]:before {
-	content: "";
-	display: block;
-	background-image: url("../images/auto-sprite/LowDef-autosprite.png");
+	background-position: -8.5px 0px;
+	width: 7.5px;
+	height: 7.5px;
 }
 
 .sprite-excel:before {
-	background-position: 0px 0px;
+	background-position: 0px -17px;
 	width: 15px;
-	height: 15px;
+	height: 14.5px;
 }
 
 .sprite-pdf:before {
-	background-position: -17px 0px;
+	background-position: 0px 0px;
 	width: 15px;
 	height: 15px;
 }
 
 .sprite-powerpoint:before {
-	background-position: 0px -17px;
+	background-position: -17px -17px;
 	width: 15px;
-	height: 15px;
+	height: 14.5px;
 }
 
 .sprite-word:before {
-	background-position: -17px -17px;
+	background-position: -17px 0px;
 	width: 15px;
 	height: 15px;
 }
@@ -1441,6 +1425,7 @@ body.theme-light .themed-footer {
 
 [class*=" sprite-"]:before,
 [class^="sprite-"]:before {
+	background-size: 32px 31.5px;
 	background-image: url("../images/auto-sprite/HighDef-autosprite.png");
 }
 
