Sprite classes tested and working!
Sprites use this format:
sprite-SPRITE_SHEET_NAME-SPRITE_NAME

I have some small kinks with the standard sprite mixin I'd like to sort
out before merging this change into master.

--- a/assets/css/media-merge/style-lt-ie9.css
+++ b/assets/css/media-merge/style-lt-ie9.css
@@ -72,6 +72,10 @@ SCSS variables are information about icon's compiled state, stored under its ori
 At the bottom of this section, we provide information about the spritesheet itself
 */
 
+/*================================================*\
+	SPRITE SHEET LIST
+\*================================================*/
+
 .mobileOnly,
 .tabletOnly,
 .desktopOnly {
@@ -235,41 +239,15 @@ a.external-link:after,
 	display: block;
 }
 
-/*
-The `sprites` mixin generates identical output to the CSS template but can be overridden inside of SCSS
-
-@include sprites(map-get($spritesheet, 'sprites'));
-*/
+/*================================================*\
+	SPRITE MIXINS
+\*================================================*/
 
 [class*=" sprite-"]:before,
 [class^="sprite-"]:before {
 	content: "";
 	display: inline-block;
-	background-image: url(../images/auto-sprite/LowDef-autosprite.png);
-}
-
-.sprite-external-link:before {
-	background-position: -8.5px -8.5px;
-	width: 5px;
-	height: 5.5px;
-}
-
-.sprite-globe:before {
-	background-position: 0px 0px;
-	width: 7.5px;
-	height: 7.5px;
-}
-
-.sprite-music:before {
-	background-position: 0px -8.5px;
-	width: 7.5px;
-	height: 7px;
-}
-
-.sprite-podcast:before {
-	background-position: -8.5px 0px;
-	width: 7.5px;
-	height: 7.5px;
+	background-image: url("../images/auto-sprite/LowDef-autosprite.png");
 }
 
 .sprite-excel:before {
@@ -292,6 +270,37 @@ The `sprites` mixin generates identical output to the CSS template but can be ov
 
 .sprite-word:before {
 	background-position: -17px 0px;
+	width: 15px;
+	height: 15px;
+}
+
+[class*=" sprite-"]:before,
+[class^="sprite-"]:before {
+	content: "";
+	display: inline-block;
+	background-image: url("../images/auto-sprite/AllDevices-LowDef-autosprite.png");
+}
+
+.sprite-external-link:before {
+	background-position: -8.5px -8.5px;
+	width: 10px;
+	height: 11px;
+}
+
+.sprite-globe:before {
+	background-position: 0px 0px;
+	width: 15px;
+	height: 15px;
+}
+
+.sprite-music:before {
+	background-position: 0px -8.5px;
+	width: 15px;
+	height: 14px;
+}
+
+.sprite-podcast:before {
+	background-position: -8.5px 0px;
 	width: 15px;
 	height: 15px;
 }
