--- a/assets/sass/import-maps/config-map.scss
+++ b/assets/sass/import-maps/config-map.scss
@@ -6,3 +6,4 @@
 @import "../00-config-files/icons";
 @import "../00-config-files/sprite-sheets/01-HighDef-sprites";
 @import "../00-config-files/sprite-sheets/02-AllDevices-LowDef-sprites";
+@import "../00-config-files/sprite-sheets/SHEET-LIST";
