--- a/assets/css/style-lt-ie9.css
+++ b/assets/css/style-lt-ie9.css
@@ -45,6 +45,9 @@ SCSS variables are information about icon's compiled state, stored under its ori
 
 At the bottom of this section, we provide information about the spritesheet itself
 */
+/*================================================*\
+	SPRITE SHEET LIST
+\*================================================*/
 .mobileOnly, .tabletOnly, .desktopOnly { display: none; }
 
 .nonMobile { display: block; }
@@ -77,29 +80,29 @@ nav ul, .columns { margin: 0; padding: 0; list-style: none; }
 
 [class^="icon-"]:before, [class^="icon-"]:after, [class*=" icon-"]:before, [class*=" icon-"]:after { display: block; }
 
-/*
-The `sprites` mixin generates identical output to the CSS template but can be overridden inside of SCSS
+/*================================================*\
+	SPRITE MIXINS
+\*================================================*/
+[class*=" sprite-primary-"]:before, [class^="sprite-primary-"]:before { content: ''; display: inline-block; background-image: url("../images/auto-sprite/LowDef-autosprite.png"); }
+@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192ppi), only screen and (min-resolution: 2dppx) { [class*=" sprite-primary-"]:before, [class^="sprite-primary-"]:before { background-size: 32px 31.5px; background-image: url("../images/auto-sprite/HighDef-autosprite.png"); } }
 
-@include sprites(map-get($spritesheet, 'sprites'));
-*/
-[class*=" sprite-"]:before, [class^="sprite-"]:before { content: ""; display: inline-block; background-image: url(../images/auto-sprite/LowDef-autosprite.png); }
-@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192ppi), only screen and (min-resolution: 2dppx) { [class*=" sprite-"]:before, [class^="sprite-"]:before { background-size: 32px 31.5px; background-image: url("../images/auto-sprite/HighDef-autosprite.png"); } }
+.sprite-primary-excel:before { background-position: 0px -17px; width: 15px; height: 14.5px; }
 
-.sprite-external-link:before { background-position: -8.5px -8.5px; width: 5px; height: 5.5px; }
+.sprite-primary-pdf:before { background-position: 0px 0px; width: 15px; height: 15px; }
 
-.sprite-globe:before { background-position: 0px 0px; width: 7.5px; height: 7.5px; }
+.sprite-primary-powerpoint:before { background-position: -17px -17px; width: 15px; height: 14.5px; }
 
-.sprite-music:before { background-position: 0px -8.5px; width: 7.5px; height: 7px; }
+.sprite-primary-word:before { background-position: -17px 0px; width: 15px; height: 15px; }
 
-.sprite-podcast:before { background-position: -8.5px 0px; width: 7.5px; height: 7.5px; }
+[class*=" sprite-secondary-"]:before, [class^="sprite-secondary-"]:before { content: ''; display: inline-block; background-image: url("../images/auto-sprite/AllDevices-LowDef-autosprite.png"); }
 
-.sprite-excel:before { background-position: 0px -17px; width: 15px; height: 14.5px; }
+.sprite-secondary-external-link:before { background-position: -17px -17px; width: 10px; height: 11px; }
 
-.sprite-pdf:before { background-position: 0px 0px; width: 15px; height: 15px; }
+.sprite-secondary-globe:before { background-position: 0px 0px; width: 15px; height: 15px; }
 
-.sprite-powerpoint:before { background-position: -17px -17px; width: 15px; height: 14.5px; }
+.sprite-secondary-music:before { background-position: 0px -17px; width: 15px; height: 14px; }
 
-.sprite-word:before { background-position: -17px 0px; width: 15px; height: 15px; }
+.sprite-secondary-podcast:before { background-position: -17px 0px; width: 15px; height: 15px; }
 
 /*   SHARED ANIMATION EFFECTS   */
 /*******************************************\
