--- a/assets/sass/01-global-mixins/_functions.scss
+++ b/assets/sass/01-global-mixins/_functions.scss
@@ -2,6 +2,23 @@
 //  sass functions  //
 /////////////////////
 
+
+// map-fetch($map, $keys)
+//https://gist.github.com/jlong/8760275
+//
+// An easy way to fetch a deep value in a multi-level map. Works much like
+// map-get() except that you pass multiple keys as the second parameter to
+// go down multiple levels in the nested map.
+//
+@function map-deep-get($map, $keys) {
+  $value: $map;
+  @each $key in $keys {
+    $value: map-get($value, $key);
+  }
+  @return $value;
+}
+
+
 //Functions taken from: http://hugogiraudel.com/2013/08/08/advanced-sass-list-functions/
 
 //REVERSE A SASS LIST
