--- a/assets/sass/01-global-mixins/sprites.scss
+++ b/assets/sass/01-global-mixins/sprites.scss
@@ -1,9 +1,26 @@
-﻿
-//manually list all spritesheet variables here
-$spritesheets:
-	$spritesheet-alldevices,
-	$spritesheet-highdef;
+﻿/*================================================*\
+	SPRITE MIXINS
+\*================================================*/
+//	Holds all the mixins you need to access
+//	sprites easily
+//=================================================
 
+//check if the sprite sheet is retina compatible (has a high and low definition version or not)
+@function isRetina($sheet_name){
+	@return map-has-key(map-get($spritesheets, retina-sheets), $sheet_name);
+}
+
+@function get-sheet($sheet_name, $version: hd){
+
+	@if (isRetina($sheet_name)){
+		//get either the hd spritesheet variable or the path to the low-def spritesheet
+		@return map-deep-get($spritesheets, retina-sheets $sheet_name $version);
+	}
+	@else {
+		//get the standard definition sprite sheet variable
+		@return map-deep-get($spritesheets, standard-sheets $sheet_name);
+	}
+}
 
 @mixin M-sprite-width($sprite, $retina: true) {
 
@@ -37,60 +54,74 @@ $spritesheets:
 	$x: $sprite-x;
 	$y:  $sprite-y;
 
-	@if ($retina: true) {
+
+	@if ($retina == true) {
 		$x: $sprite-x / 2;
 		$y:  $sprite-y / 2;
 	}
 
+	//@debug (map-get($sprite, 'name'), $retina, $x $y);
+
 	background-position: $x $y;
 }
 
-@mixin M-sprite-image($spritesheet: $spritesheet-highdef) {
-	@if ($spritesheet == $spritesheet-highdef){
-		background-image: url(../images/auto-sprite/LowDef-autosprite.png);
+@mixin M-sprite-image($sheet_name: primary) {
+
+	//if it is a retina compatible style sheet...
+	@if ( isRetina($sheet_name) ){
+		background-image: url(get-sheet($sheet_name,ld));
 		@include M-retina {
-			background-size: (map-get($spritesheet, 'width') / 2)( map-get($spritesheet, 'height') / 2);
-			background-image: url(map-get($spritesheet, 'image'));
+			background-size: (map-get(get-sheet($sheet_name), 'width') / 2)( map-get(get-sheet($sheet_name), 'height') / 2);
+			background-image: url(map-get(get-sheet($sheet_name), 'image'));
 		}
-	} @else {
-		background-image: url(map-get($spritesheet, 'image'));
+	}
+
+	//else if it does not have a High Definition and Low Definition version...
+	@else {
+		background-image: url(map-get(get-sheet($sheet_name), 'image'));
 	}
 }
 
-@mixin M-sprite($sprite, $spritesheet: $spritesheet-lowdef, $retina-sheet: $spritesheet-highdef) {
-  @include M-sprite-position($sprite);
-  @include M-sprite-width($sprite);
-  @include M-sprite-height($sprite);
-  @include M-sprite-image($spritesheet, $retina-sheet);
+@mixin M-sprite($sprite, $sheet_name: primary) {
+
+	$retina: isRetina($sheet_name);
+
+	@include M-sprite-position($sprite, $retina);
+	@include M-sprite-width($sprite, $retina);
+	@include M-sprite-height($sprite, $retina);
+	@include M-sprite-image($sheet_name);
 }
 
-/*
-The `sprites` mixin generates identical output to the CSS template
-  but can be overridden inside of SCSS
 
-@include sprites(map-get($spritesheet, 'sprites'));
-*/
-@mixin M-sprites($spritesheet) {
-  $sprites: map-get($spritesheet, 'sprites');
-  @each $sprite in $sprites {
-    $sprite-name: map-get($sprite, 'name');
-    .sprite-#{$sprite-name}:before {
-		@include M-sprite-position($sprite);
-		@include M-sprite-width($sprite);
-		@include M-sprite-height($sprite);
-    }
-  }
+//@include sprites(sheet_name);
+
+@mixin M-sprites($sheet_name) {
+
+	$sprites: map-get(get-sheet($sheet_name),'sprites');
+	$retina: isRetina($sheet_name);
+
+	@each $sprite in $sprites {
+		$sprite-name: map-get($sprite, 'name');
+		.sprite-#{$sheet_name}-#{$sprite-name}:before {
+			@include M-sprite-position($sprite, $retina);
+			@include M-sprite-width($sprite, $retina);
+			@include M-sprite-height($sprite, $retina);
+		}
+	}
 }
-
 
 //generates the sprite classes
+//format: sprite-SPRITE_SHEET_NAME-SPRITE_NAME
 @if ($main-sheet == true){
-	[class*=" sprite-"], [class^="sprite-"] {
-		@include M-before(inline-block){
-			@include M-sprite-image($spritesheet-highdef);
+	@each $name in $all_sheet_names {
+		[class*=" sprite-#{$name}-"], [class^="sprite-#{$name}-"] {
+			&:before {
+				content: '';
+				display: inline-block;
+				@include M-sprite-image($name);
+			}
 		}
-	}
-	@each $sheet in $spritesheets {
-		@include M-sprites($sheet);
+
+		@include M-sprites($name);
 	}
 }
