Fixed grunt file bug
Fixed the grunt file so it would generate the HD sprite before trying to
resize it on start up.

--- a/assets/css/media-merge/style-lt-ie9.css
+++ b/assets/css/media-merge/style-lt-ie9.css
@@ -262,6 +262,12 @@ a.external-link:after,
 	height: 15px;
 }
 
+.sprite-primary-powerpoint:before {
+	background-position: -17px -17px;
+	width: 15px;
+	height: 14.5px;
+}
+
 .sprite-primary-word:before {
 	background-position: -17px 0px;
 	width: 15px;
